# social-gaming-platform

./: .gitignore  CMakeLists.txt  README.md
games/: example.game  for-example.game  match-example.game  match-test.game  setup-example.game  setup.game  state-example.game
lib/: CMakeLists.txt
lib/expression/: CMakeLists.txt
lib/expression/include/: Expression.h  Rule.h
lib/game-communicator/: CMakeLists.txt
lib/game-communicator/include/: GameCommunicator.h
lib/game-communicator/src/: GameCommunicator.cpp
lib/game-config-loader/: CMakeLists.txt
lib/game-config-loader/include/: ConstantManager.h  GameConfigLoader.h  GameEnvironment.h  GameRules.h  GameSetup.h  GameSetupLoader.h  GameState.h  GameStateLoader.h  Translator.h
lib/game-config-loader/src/: ConstantManager.cpp  ConstantManager.h  GameConfigLoader.cpp  GameRules.cpp  GameSetup.cpp  GameSetupLoader.cpp  GameState.cpp  GameStateLoader.cpp  Translator.cpp
lib/game-creation/: CMakeLists.txt
lib/game-creation/game-config-loader/: CMakeLists.txt
lib/game-creation/game-config-loader/include/: Evaluator.h  GameConfigLoader.h  GameEnvironment.h  GameSetup.h  GameSetupLoader.h  GameState.h  GameStateLoader.h  Translator.h
lib/game-creation/game-config-loader/src/: Evaluator.cpp  GameConfigLoader.cpp  GameEnvironment.cpp  GameRules.cpp  GameSetup.cpp  GameSetupLoader.cpp  GameState.cpp  GameStateLoader.cpp  Translator.cpp
lib/game-creation/game-instance/: CMakeLists.txt
lib/game-creation/game-instance-manager/: CMakeLists.txt
lib/game-creation/game-instance-manager/include/: GameInstanceManager.h
lib/game-creation/game-instance-manager/src/: GameInstanceManager.cpp
lib/game-creation/game-instance/include/: GameInstance.h
lib/game-creation/game-instance/src/: GameInstance.cpp
lib/game-instance/: CMakeLists.txt
lib/game-instance-manager/: CMakeLists.txt
lib/game-instance-manager/include/: GameInstanceManager.h
lib/game-instance-manager/src/: GameInstanceManager.cpp
lib/game-instance/include/: GameInstance.h
lib/game-instance/src/: GameInstance.cpp
lib/game-rule-engine/: CMakeLists.txt
lib/game-rule-engine/include/: Expression.h  GameRuleEngine.h  GameState.h  InGameUserManager.h  Player.h  PlayerManager.h  Rule.h  RuleInterpreter.h  RuleNode.h  Rules.h  Spectator.h  User.h  UserManager.h
lib/game-rule-engine/src/: BaseRule.cpp  BodyRule.cpp  GameRuleEngine.cpp  GameState.cpp  InGameUserManager.cpp  MessageRule.cpp  Player.cpp  PlayerManager.cpp  Rule.cpp  RuleInterpreter.cpp  Spectator.cpp  UserManager.cpp
lib/message-handler/: CMakeLists.txt
lib/message-handler/include/: Message.h  MessageHandler.h
lib/message-handler/src/: MessageHandler.cpp
lib/networking/: CMakeLists.txt
lib/networking/include/: Client.h  Server.h
lib/networking/src/: Client.cpp  Server.cpp
lib/rule/: CMakeLists.txt
lib/rule-creation/: CMakeLists.txt
lib/rule-creation/expression-evaluate/: CMakeLists.txt
lib/rule-creation/expression-evaluate/include/: ExpressionEvaluator.h
lib/rule-creation/expression-evaluate/src/: ExpressionEvaluator.cpp
lib/rule-creation/expression/include/: Expression.h  Rule.h
lib/rule-creation/game-rule-engine/: CMakeLists.txt
lib/rule-creation/game-rule-engine/include/: InGameUserManager.h  Rule.h
lib/rule-creation/game-rule-engine/src/: BaseRule.cpp  BodyRule.cpp  InGameUserManager.cpp  RuleInterpreter.cpp
lib/rule-creation/rule/: CMakeLists.txt
lib/rule-creation/rule-execute/: CMakeLists.txt
lib/rule-creation/rule-execute/include/: OutgoingMessages.h  RuleExecute.h
lib/rule-creation/rule-execute/src/: OutgoingMessages.cpp  RuleExecute.cpp
lib/rule-creation/rule-interpreter/src/: RuleInterpreter.cpp
lib/rule-creation/rule-node/: CMakeLists.txt
lib/rule-creation/rule-node/src/: RuleNode.cpp
lib/rule-creation/rule/include/: Rule.h
lib/rule-creation/rule/src/: BaseRule.cpp  InputRule.cpp  ReverseRule.cpp  ScoresRule.cpp  ShuffleRule.cpp
lib/rule-interpreter/: CMakeLists.txt
lib/rule-interpreter/include/: RuleInterpreter.h
lib/rule-interpreter/src/: RuleInterpreter.cpp
lib/rule-node/include/: RuleNode.h
lib/rule-node/src/: RuleNode.cpp
lib/rule/include/: Rule.h
lib/rule/src/: AssignmentRule.cpp  BaseRule.cpp  BodyRule.cpp  DiscardRule.cpp  ExtendRule.cpp  ForRule.cpp  MessageRule.cpp  ParallelForRule.cpp  Rule.cpp
lib/user-manager/: CMakeLists.txt
lib/user-manager/include/: UserManager.h
lib/user-manager/src/: UserManager.cpp
parser/: CMakeLists.txt  demo.cpp  rock-paper-scissors.game
test/: CMakeLists.txt  EvaluatorTests.cpp  EvaluatorTestsForModifyOperation.cpp  EvaluatorTestsForOperation.cpp  GameEnvironmentTests.cpp  ProcessMessagesTests.cpp  ServerManagerTests.cpp  expressionTests.cpp  gameCommunicatorTests.cpp  inGameUserManagerTests.cpp  outgoingMessagesTests.cpp  ruleExecuteTests.cpp  ruleFactoryTests.cpp  setupTests.cpp  test.cpp  userManagerTests.cpp
test/games/: body-rule-test.game  for-rule-test.game  parallel-for-rule-test.game  setup-parser-invalid-test.game  setup-parser-test.game
tools/: CMakeLists.txt  main.cpp
tools/client/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  chatclient.cpp
tools/server/: CMakeLists.txt  server.cpp
tools/server-manager/: CMakeLists.txt  ServerManager.cpp
tools/server-manager/include/: ServerManager.h
tools/server-manager/src/: ProcessMessages.cpp  ServerManager.cpp
